Chrome scrolling bug fixed
Choppy performance was related to costly painting of custom scrollbar, too many event handlers and the backdrop-filter of card elements.

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -146,8 +146,6 @@ body {
   background-color: rgba(29, 72, 90, 0.75);
   box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.75);
   overflow: none;
-  backdrop-filter: $blur;
-  -webkit-backdrop-filter: $blur;
 }
 
 .card {
@@ -181,13 +179,7 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: none;
-
+  width: 2px;
 }
 
 /* Handle */
@@ -201,6 +193,13 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(20,20,20,.5);
 }
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+
 
 .card__title {
   padding: 0px .25rem 0px .25rem;
@@ -1281,7 +1280,6 @@ input:checked + .slider:before {
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
 
   .slider {
-    backdrop-filter: blur(15px);
     background-color: rgba(225,225,225,0.5);
   }
   .pane, .card {
